--- a/client/nav.jade
+++ b/client/nav.jade
@@ -9,9 +9,9 @@ template(name='nav')
             a.icon.item.set_model(href='/m/model' class="{{isActivePath '/m/model'}}")
                 i.large.home.icon
             each bookmarked_models
-                a.item.set_bookmarked_model(href="/m/#{slug}" class="{{isActivePath '/m/#{slug}'}}")
-                    //- i.large.icon(name=icon)
-                    |#{title}
+                a.icon.item.set_bookmarked_model(href="/m/#{slug}" class="{{isActivePath '/m/#{slug}'}}" title=title)
+                    i.large.icon(class=icon)
+                    //- |#{title}
             //- a.icon.item(href='/users' class="{{isActivePath '/users'}}" title='Users')
             //-     i.large.users.icon
             //- a.icon.item(href='/frontdesk' class="{{isActivePath '/frontdesk'}}" title='Staff')
