--- a/components/delta/model.jade
+++ b/components/delta/model.jade
@@ -116,7 +116,7 @@ template(name='field_edit')
     +text_edit key='key'  direct=true label='Key'           
     +text_edit key='field_type' direct=true label='Field Type'              
     +single_doc_edit key='field_type' ref_model='field_type' label='Field Type' direct=true                 
-    +number_edit key='rank' label='rank' direct=true                 
+    +number_edit key='rank' label='Rank' direct=true                 
     +text_edit key='ref_model' label='Reference Model' direct=true               
     if is_ref  
         +single_doc_edit key='ref_model' ref_model='model' label='Reference Model' direct=true
