--- a/client/profile/user_messages.jade
+++ b/client/profile/user_messages.jade
@@ -23,6 +23,7 @@ template(name='user_messages')
                         +user_list_toggle key='read_by_ids' label='Mark Read' icon='eye'
                         if can_edit
                             +remove_button
+                        div
                         +author_info
                         +creation_info
                         //- +watson_view
