--- a/components/accounts/login.jade
+++ b/components/accounts/login.jade
@@ -6,18 +6,18 @@ template(name='login')
                 if message
                     h4.ui.center.aligned.header #{message}
                 .ui.fluid.labeled.input(class=login_class)
-                    .ui.basic.label 
+                    .ui.smoothed.basic.label 
                         i.user.grey.icon
                         |Username
                     input.username(type='text')
                 .ui.fluid.labeled.input(class=login_class)
-                    .ui.basic.label 
+                    .ui.smoothed.basic.label 
                         i.lock.grey.icon
                         | Password
                     input.password(type='password')
                 if username
                     if logging_in
-                        .ui.fluid.large.teal.circular.button.enter(title="Login #{username}" class=enter_class)
+                        .ui.fluid.large.blue.circular.button.enter(title="Login #{username}" class=enter_class)
                             |Login #{username}
                             i.right.chevron.icon
                     else
