working rules pdf export, manual parsing

--- a/client/fields.jade
+++ b/client/fields.jade
@@ -571,8 +571,9 @@ template(name='signature_view')
             i.grey.icon(class=icon)
         | #{title}    
     img.ui.large.centered.rounded.image(src=field_value)
-
-
+    .ui.icon.button.print_rules
+        i.download.icon
+        |Download PDF
 
 template(name='boolean_edit')
     //- div
