--- a/components/delta/model.jade
+++ b/components/delta/model.jade
@@ -14,7 +14,7 @@ template(name='model_edit')
                         +textarea_edit key='description' label='Description' direct=true
                         +array_edit key='tags' label='Tags' direct=true
                         +text_edit key='collection' label='Collection' direct=true
-                        +multi_doc_edit key='view_roles' label='View Roles' ref_model='role'
+                        +multi_doc_edit key='view_roles' label='View Roles' ref_model='role' direct=true
                     a.ui.green.big.circular.icon.button(href="/m/#{slug}")
                         i.big.checkmark.icon
                     #delete_model.ui.red.icon.circular.button
@@ -117,7 +117,9 @@ template(name='field_edit')
     +text_edit key='field_type' direct=true label='Field Type'              
     +single_doc_edit key='field_type' ref_model='field_type' label='Field Type' direct=true                 
     +number_edit key='rank' label='Rank' direct=true                 
-    +text_edit key='ref_model' label='Reference Model' direct=true               
+    +text_edit key='ref_model' label='Reference Model' direct=true
+    +boolean_edit key='faceted' label='Faceted' direct=true
+
     if is_ref  
         +single_doc_edit key='ref_model' ref_model='model' label='Reference Model' direct=true
     else if is_user_ref  
